syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "AccountingFinaccountProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: Financial Account
message FinAccountFlatData {
    option (routines.entity_type) = "FinAccount";
    option (routines.keys).keys = "fin_account_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: finAccountId
    string fin_account_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string fin_account_type_id = 2 [(routines.opts).field_type = "id"];
    string status_id = 3 [(routines.opts).field_type = "id"];
    string fin_account_name = 4 [(routines.opts).field_type = "name"];
    string fin_account_code = 5 [(routines.opts).field_type = "long-varchar"];
    string fin_account_pin = 6 [(routines.opts).field_type = "long-varchar"];
    string currency_uom_id = 7 [(routines.opts).field_type = "id"];
    string organization_party_id = 8 [(routines.opts).field_type = "id"];
    string owner_party_id = 9 [(routines.opts).field_type = "id"];
    string post_to_gl_account_id = 10 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 11 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 12 [(routines.opts).field_type = "date-time"];
    routines.Indicator is_refundable = 13 [(routines.opts).field_type = "indicator"];
    string replenish_payment_id = 14 [(routines.opts).field_type = "id"];
    routines.Currency replenish_level = 15 [(routines.opts).field_type = "currency-amount"];
    routines.Currency actual_balance = 16 [(routines.opts).field_type = "currency-amount"];
    routines.Currency available_balance = 17 [(routines.opts).field_type = "currency-amount"];
    google.protobuf.Timestamp last_updated_tx_stamp = 18 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 19 [(routines.opts).field_type = "date-time"];
    string tenant_id = 20 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 37;
    map<string, google.protobuf.Any> attachments = 38 ;
}

message FinAccountKey{
    string fin_account_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message FinAccountList{
    repeated FinAccountFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListFinAccounts` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// Financial Account Role
message FinAccountRoleData {
    option (routines.entity_type) = "FinAccountRole";
    option (routines.keys).keys = "fin_account_id, party_id, role_type_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: finAccountId, partyId, roleTypeId, fromDate
    // fields
    string fin_account_id = 1 [(routines.opts).field_type = "id"];
    string party_id = 2 [(routines.opts).field_type = "id"];
    string role_type_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp last_updated_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 7 [(routines.opts).field_type = "date-time"];
    string id = 8 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 13;
    map<string, google.protobuf.Any> attachments = 14;
}


message FinAccountRoleKey{
    string fin_account_id = 1 [(routines.opts).field_type = "id"];
    string party_id = 2 [(routines.opts).field_type = "id"];
    string role_type_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
}

message FinAccountRoleList{
    repeated FinAccountRoleData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListFinAccountRoles` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Financial Account Status
message FinAccountStatusData {
    option (routines.entity_type) = "FinAccountStatus";
    option (routines.keys).keys = "fin_account_id, status_id, status_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: finAccountId, statusId, statusDate
    // fields
    string fin_account_id = 1 [(routines.opts).field_type = "id"];
    string status_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp status_date = 3 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp status_end_date = 4 [(routines.opts).field_type = "date-time"];
    string change_by_user_login_id = 5 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_updated_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 7 [(routines.opts).field_type = "date-time"];
    string id = 8 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 12;
    map<string, google.protobuf.Any> attachments = 13;
}


message FinAccountStatusKey{
    string fin_account_id = 1 [(routines.opts).field_type = "id"];
    string status_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp status_date = 3 [(routines.opts).field_type = "date-time"];
}

message FinAccountStatusList{
    repeated FinAccountStatusData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListFinAccountStatuses` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// flat-ent: Financial Account Transaction
message FinAccountTransFlatData {
    option (routines.entity_type) = "FinAccountTrans";
    option (routines.keys).keys = "fin_account_trans_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: finAccountTransId
    string fin_account_trans_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string fin_account_trans_type_id = 2 [(routines.opts).field_type = "id"];
    string fin_account_id = 3 [(routines.opts).field_type = "id"];
    string party_id = 4 [(routines.opts).field_type = "id"];
    string gl_reconciliation_id = 5 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp transaction_date = 6 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp entry_date = 7 [(routines.opts).field_type = "date-time"];
    routines.Currency amount = 8 [(routines.opts).field_type = "currency-amount"];
    string payment_id = 9 [(routines.opts).field_type = "id"];
    string order_id = 10 [(routines.opts).field_type = "id"];
    string order_item_seq_id = 11 [(routines.opts).field_type = "id"];
    string performed_by_party_id = 12 [(routines.opts).field_type = "id"];
    string reason_enum_id = 13 [(routines.opts).field_type = "id"];
    string comments = 14 [(routines.opts).field_type = "comment"];
    string status_id = 15 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 16 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 17 [(routines.opts).field_type = "date-time"];
    string tenant_id = 18 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 33;
    map<string, google.protobuf.Any> attachments = 34 ;
}

message FinAccountTransKey{
    string fin_account_trans_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message FinAccountTransList{
    repeated FinAccountTransFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListFinAccountTrans` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

